# llama-cpp-container

./: .dockerignore  README.md  dockerfile  pyproject.toml
.github/workflows/: build.yml  release.yml
config/: llama-server.conf  model.conf  model.conf.example
docs/: AIDER.md  HPC.md  INSTALL.md  MODEL.md
scripts/: chat.py  download-model.sh  healthcheck.sh  run-aider.sh  run-chat.sh  run-container-cpu.sh  run-container-gpu.sh  run-interactive.sh  run-openwebui.sh  run-server.sh  run-slurm.sh  start-server.sh
